Created resume website

--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
                    <div><img src="profile .jpeg" align="left"></div>
         </div>
         <h1 align="left" align="online">Sambhavi Shubhi</h1>
-        <p align="left">Python Web Developer</p>
+        <p align="left">Frontend Web Developer</p>
     </div>
     <br>
     <hr></hr>
@@ -63,7 +63,7 @@
             <h3>Key Skills</h3>
             <li>Working Well in Under Pressure</li>
             <li>Strong Leadership</li>
-            <li> Enthusiastic & Determinant</li>
+            <li>Enthusiastic & Determinant</li>
             <br>
             <hr></hr>
             <br>
