--- a/project.html
+++ b/project.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body>
+    <div>
     <ul>
         <li><a href="3d.html">3d</a> Link 1</li>
         <li><a href="form.html">form</a> Link 2</li>
