--- a/sambhavi.html
+++ b/sambhavi.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                From <b>India</b>
+                 <b>India</b>
             </div>
             <div class="menu">
                 <a href="#">Home</a>
@@ -104,6 +104,5 @@
     <footer>
         <p>&copy; 2024 Sambhavi Shubhi. All rights reserved.</p>
     </footer>
-
 </body>
 </html>
