update code committed

--- a/resume.html
+++ b/resume.html
@@ -89,9 +89,9 @@
                     <p>*The zone status transmitter and receiver Module (display and speed control). On you receive information about the Regions, The built into the vehicle automatically alerts the driver with a red color.</p>
                   <br>  
                 <li><h4><u>Relevant Coursework</u></h4></li>
-                <h3>Python FullStack Developer</h3>
+                <h3>Frontend Web Developer</h3>
                 <p>Jan 2024-Currently running</p>
-                <p>I have done courses and projects on HTML, CSS and JavaScript. Projects like Resume Build on Web page, Form Build on Web page and Calculator. I have been started doing Courses and project on Python under Besant Technology, Bangalore.</p> 
+                <p>I have done courses and projects on HTML, CSS and JavaScript. Projects. I have been started doing Courses and project on Frontend under Besant Technology, Bangalore.</p> 
            <br>
            <br>
             <h3><u>CERTIFICATIONS</u></h3>
