--- a/sam.html
+++ b/sam.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Download Page</title>
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="download.css">
     
 </head>
 <body>
@@ -128,7 +128,7 @@
             Email.send({
                 Host : "smtp.gmail.com",
                 Username : "shubhisingh791@gmail.com",
-                Password : "password",
+                Password : "Sambhavi@01",
                 To : 'sambhavishubhi580@gmail.com',
                 From : document.getElementById("email").value,
                 Subject : "New Contact Form Enquiry",
